# 07_Failure_analysis_simple

./: Readme.md  analysis_Notebook.ipynb  pyproject.toml
01_data/: actuator_failures_extended.csv  actuator_failures_small.csv
06_notebooks/: analysis_Notebook.ipynb
